fixed alignment

--- a/src/components/collection-item/collection-item.scss
+++ b/src/components/collection-item/collection-item.scss
@@ -7,11 +7,10 @@
    position: relative;
  
    .image {
-     width: inherit;
+     width: 95%;
      height: 95%;
      background-size: cover;
      background-position: center;
-     margin: 5px;
    }
  
    .custom-button {
@@ -63,5 +62,13 @@
       height: 350px;
       align-items: center;
       width: 95vw;
+      .collection-footer {
+         width: 95%;
+         .price {
+            width: 10%;
+            display: flex;
+            justify-content: flex-end;
+          }
+      }
    }
 }
