--- a/src/components/collections-overview/collections-overview.scss
+++ b/src/components/collections-overview/collections-overview.scss
@@ -1,23 +1,13 @@
-.collection-preview {
+.collections-overview {
    display: flex;
    flex-direction: column;
-   margin-bottom: 30px;
- 
-   .title {
-     font-size: 28px;
-     margin-bottom: 25px;
-   }
- 
-   .preview {
-     display: flex;
-     justify-content: space-between;
-   }
+   justify-content: center;
+   margin-top: 100px;
+   padding: 20px;
  }
 
  @media (max-width: 700px) {
-   .preview {
-      display: flex;
-      justify-content: center;
+   .collections-overview {
       padding: 10px;
     }
 }
